<resources>
    <string name="app_name">ShowPetPictures</string>
    <string name="textSelect">선택을 시작하시겠습니까?</string>
    <string name="checkStart">시작함</string>
    <string name="checkStarts">시작함</string>
    <string name="textFavorite">좋아하는 애완동물은?</string>
    <string name="radioBull">황소</string>
    <string name="radioCro">악어</string>
    <string name="radioEgle">독수리</string>
    <string name="btnDone">선택완료</string>
    <string name="btnExit">종료</string>
    <string name="btnFirst">처음으로</string>
</resources>