<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/marginMedium"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textSelect"
        android:textSize="@dimen/textSizeLarge"/>
    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkStart"
        android:textSize="@dimen/marginMedium"/>
    <LinearLayout
        android:id="@+id/LinearSub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textFavorite"
            android:textSize="@dimen/textSizeLarge"/>
        <RadioGroup
            android:id="@+id/rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marginMedium">
            <RadioButton
                android:id="@+id/radioBull"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioBull"
                android:textSize="@dimen/textSizeMedium"/>
            <RadioButton
                android:id="@+id/radioCro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioCro"
                android:textSize="@dimen/textSizeMedium"/>
            <RadioButton
                android:id="@+id/radioEgle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioEgle"
                android:textSize="@dimen/textSizeMedium"/>
        </RadioGroup>
        <Button
            android:id="@+id/btnDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marginMedium"
            android:text="@string/btnDone"/>
<!--    원본 사진 크기로 보이게 하려면 너비: match_parent, 높이: wrap_content로 설정    -->
        <ImageView
            android:id="@+id/imgV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/bull"
            android:scaleType="fitXY"/>
    </LinearLayout>
</LinearLayout>